don't show action button if message doesn't contain restart or upgrade and fixed alignment

--- a/src/app/components/core/system-alert/system-alert.component.css
+++ b/src/app/components/core/system-alert/system-alert.component.css
@@ -42,3 +42,7 @@
     border-radius: 2px;
     border: lightgray solid 1px;
 }
+
+.align-timestamp {
+    padding-left: 1.7rem !important;
+}
